--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -2180,12 +2180,11 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-controls/gz_ros2_control.git
-      version: master
+      version: jazzy
     release:
       packages:
       - gz_ros2_control
       - gz_ros2_control_demos
-      - gz_ros2_control_tests
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/ign_ros2_control-release.git
@@ -2193,7 +2192,7 @@ repositories:
     source:
       type: git
       url: https://github.com/ros-controls/gz_ros2_control.git
-      version: master
+      version: jazzy
     status: maintained
   gz_sensors_vendor:
     doc:
