--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2583,12 +2583,6 @@ repositories:
       url: https://github.com/mikeferguson/grasping_msgs.git
       version: ros2
     status: maintained
-  graph_datasets:
-    source:
-      type: git
-      url: https://github.com/snt-arg/graph_datasets.git
-      version: develop
-    status: maintained
   grbl_msgs:
     doc:
       type: git
@@ -8560,6 +8554,12 @@ repositories:
       url: https://github.com/clearpathrobotics/simple-term-menu.git
       version: humble
     status: developed
+  situational_graph_datasets:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_datasets.git
+      version: develop
+    status: maintained
   slam_toolbox:
     doc:
       type: git
