--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -2027,12 +2027,6 @@ repositories:
       url: https://github.com/mikeferguson/grasping_msgs.git
       version: ros2
     status: maintained
-  graph_reasoning:
-    source:
-      type: git
-      url: https://github.com/snt-arg/graph_reasoning.git
-      version: develop
-    status: maintained
   grbl_msgs:
     doc:
       type: git
@@ -7116,6 +7110,12 @@ repositories:
       type: git
       url: https://github.com/oKermorgant/simple_launch.git
       version: devel
+    status: maintained
+  situational_graphs_reasoning:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_reasoning.git
+      version: develop
     status: maintained
   slam_toolbox:
     doc:
