Remame reasoning_msgs->situational_graphs_reasoning_msgs

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -5208,12 +5208,6 @@ repositories:
       url: https://github.com/ros/resource_retriever.git
       version: iron
     status: maintained
-  reasoning_msgs:
-    source:
-      type: git
-      url: https://github.com/snt-arg/reasoning_msgs.git
-      version: main
-    status: maintained
   rig_reconfigure:
     release:
       tags:
@@ -7116,6 +7110,12 @@ repositories:
       type: git
       url: https://github.com/oKermorgant/simple_launch.git
       version: devel
+    status: maintained
+  situational_graphs_reasoning_msgs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_reasoning_msgs.git
+      version: main
     status: maintained
   slam_toolbox:
     doc:
