--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -6506,12 +6506,6 @@ repositories:
       url: https://github.com/ros/resource_retriever.git
       version: humble
     status: maintained
-  reasoning_msgs:
-    source:
-      type: git
-      url: https://github.com/snt-arg/reasoning_msgs.git
-      version: main
-    status: maintained
   rig_reconfigure:
     release:
       tags:
@@ -8560,6 +8554,12 @@ repositories:
       url: https://github.com/clearpathrobotics/simple-term-menu.git
       version: humble
     status: developed
+  situational_graphs_reasoning_msgs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_reasoning_msgs.git
+      version: main
+    status: maintained
   slam_toolbox:
     doc:
       type: git
