--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8403,12 +8403,6 @@ repositories:
       url: https://github.com/septentrio-gnss/septentrio_gnss_driver.git
       version: ros2
     status: maintained
-  s_graphs_msgs:
-    source:
-      type: git
-      url: https://github.com/snt-arg/s_graphs_msgs.git
-      version: main
-    status: maintained
   sick_safetyscanners2:
     doc:
       type: git
@@ -8560,6 +8554,12 @@ repositories:
       url: https://github.com/clearpathrobotics/simple-term-menu.git
       version: humble
     status: developed
+  situational_graphs_msgs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_msgs.git
+      version: main
+    status: maintained
   slam_toolbox:
     doc:
       type: git
