--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7001,12 +7001,6 @@ repositories:
       url: https://github.com/septentrio-gnss/septentrio_gnss_driver.git
       version: ros2
     status: maintained
-  s_graphs_msgs:
-    source:
-      type: git
-      url: https://github.com/snt-arg/s_graphs_msgs.git
-      version: main
-    status: maintained
   sick_safetyscanners2:
     doc:
       type: git
@@ -7116,6 +7110,12 @@ repositories:
       type: git
       url: https://github.com/oKermorgant/simple_launch.git
       version: devel
+    status: maintained
+  situational_graphs_msgs:
+    source:
+      type: git
+      url: https://github.com/snt-arg/situational_graphs_msgs.git
+      version: main
     status: maintained
   slam_toolbox:
     doc:
