--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -2425,7 +2425,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/ros-perception/image_pipeline.git
-      version: rolling
+      version: jazzy
     release:
       packages:
       - camera_calibration
@@ -2445,7 +2445,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/ros-perception/image_pipeline.git
-      version: rolling
+      version: jazzy
     status: maintained
   image_transport_plugins:
     doc:
