--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -431,6 +431,25 @@ repositories:
       url: https://github.com/fictionlab/ros_aruco_opencv.git
       version: iron
     status: maintained
+  aruco_ros:
+    doc:
+      type: git
+      url: https://github.com/pal-robotics/aruco_ros.git
+      version: humble-devel
+    release:
+      packages:
+      - aruco
+      - aruco_msgs
+      - aruco_ros
+      tags:
+        release: release/iron/{package}/{version}
+      url: https://github.com/pal-gbp/aruco_ros-release.git
+      version: 5.0.5-1
+    source:
+      type: git
+      url: https://github.com/pal-robotics/aruco_ros.git
+      version: humble-devel
+    status: maintained
   async_web_server_cpp:
     doc:
       type: git
