--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3527,6 +3527,11 @@ repositories:
       type: git
       url: https://github.com/ros-event-camera/libcaer_vendor.git
       version: humble
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/libcaer_vendor-release.git
+      version: 1.1.0-2
     source:
       type: git
       url: https://github.com/ros-event-camera/libcaer_vendor.git
