libcaer_vendor: 1.2.0-1 in 'iron/distribution.yaml' [bloom]

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -2853,6 +2853,11 @@ repositories:
       type: git
       url: https://github.com/ros-event-camera/libcaer_vendor.git
       version: iron
+    release:
+      tags:
+        release: release/iron/{package}/{version}
+      url: https://github.com/ros2-gbp/libcaer_vendor-release.git
+      version: 1.2.0-1
     source:
       type: git
       url: https://github.com/ros-event-camera/libcaer_vendor.git
