--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -2938,6 +2938,11 @@ repositories:
       type: git
       url: https://github.com/ros-event-camera/libcaer_vendor.git
       version: jazzy
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/libcaer_vendor-release.git
+      version: 1.3.0-1
     source:
       type: git
       url: https://github.com/ros-event-camera/libcaer_vendor.git
