--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -2954,6 +2954,11 @@ repositories:
       type: git
       url: https://github.com/ros-event-camera/libcaer_vendor.git
       version: rolling
+    release:
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/libcaer_vendor-release.git
+      version: 1.0.0-1
     source:
       type: git
       url: https://github.com/ros-event-camera/libcaer_vendor.git
