Add pyhton3-asn1tools-pip to rosdep/python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -4922,6 +4922,13 @@ python3-argcomplete:
   openembedded: [python3-argcomplete@meta-python]
   rhel: ['python%{python3_pkgversion}-argcomplete']
   ubuntu: [python3-argcomplete]
+python3-asn1tools-pip:
+  debian:
+    pip:
+      packages: [asn1tools]
+  ubuntu:
+    pip:
+      packages: [asn1tools]
 python3-astropy-pip:
   debian:
     pip:
