--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -3565,12 +3565,13 @@ repositories:
       - mrpt_generic_sensor
       - mrpt_sensor_bumblebee_stereo
       - mrpt_sensor_gnns_nmea
+      - mrpt_sensor_imu_taobotics
       - mrpt_sensorlib
       - mrpt_sensors
       tags:
         release: release/iron/{package}/{version}
       url: https://github.com/ros2-gbp/mrpt_sensors-release.git
-      version: 0.1.0-1
+      version: 0.2.0-1
     source:
       type: git
       url: https://github.com/mrpt-ros-pkg/mrpt_sensors.git
