add openeb_vendor to humble,iron,rolling,jazzy

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5083,6 +5083,16 @@ repositories:
         release: release/humble/{package}/{version}
       url: https://github.com/ros2-gbp/ompl-release.git
       version: 1.6.0-1
+  openeb_vendor:
+    doc:
+      type: git
+      url: https://github.com/ros-event-camera/openeb_vendor.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/ros-event-camera/openeb_vendor.git
+      version: humble
+    status: developed
   openni2_camera:
     doc:
       type: git
