--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -4040,6 +4040,16 @@ repositories:
         release: release/rolling/{package}/{version}
       url: https://github.com/ros2-gbp/ompl-release.git
       version: 1.5.2-4
+  openeb_vendor:
+    doc:
+      type: git
+      url: https://github.com/ros-event-camera/openeb_vendor.git
+      version: rolling
+    source:
+      type: git
+      url: https://github.com/ros-event-camera/openeb_vendor.git
+      version: rolling
+    status: developed
   openni2_camera:
     doc:
       type: git
