franka_description: 0.2.0-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -2242,6 +2242,15 @@ repositories:
       version: main
     status: developed
   franka_description:
+    doc:
+      type: git
+      url: https://github.com/frankaemika/franka_description.git
+      version: main
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/franka_description-release.git
+      version: 0.2.0-1
     source:
       type: git
       url: https://github.com/frankaemika/franka_description.git
