--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -6872,6 +6872,7 @@ repositories:
       tags:
         release: release/jazzy/{package}/{version}
       url: https://github.com/ros2-gbp/septentrio_gnss_driver_ros2-release.git
+      version: 1.4.0-2
     source:
       test_pull_requests: true
       type: git
