--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5927,7 +5927,7 @@ repositories:
       version: 4.1.3-1
     source:
       type: git
-      url: https://bitbucket.org/qbrobotics/qbdevice-ros
+      url: https://bitbucket.org/qbrobotics/qbdevice-ros.git
       version: production-humble
     status: developed
   qb_softhand_industry:
