--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8391,7 +8391,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/septentrio-gnss/septentrio_gnss_driver.git
-      version: ros2
+      version: master
     release:
       tags:
         release: release/humble/{package}/{version}
@@ -8401,7 +8401,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/septentrio-gnss/septentrio_gnss_driver.git
-      version: ros2
+      version: master
     status: maintained
   sick_safetyscanners2:
     doc:
