--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7014,7 +7014,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/septentrio-gnss/septentrio_gnss_driver.git
-      version: ros2
+      version: master
     release:
       tags:
         release: release/iron/{package}/{version}
@@ -7024,7 +7024,7 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/septentrio-gnss/septentrio_gnss_driver.git
-      version: ros2
+      version: master
     status: maintained
   sick_safetyscanners2:
     doc:
