beluga: 2.0.0-1 in 'jazzy/distribution.yaml' [bloom]

--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -676,6 +676,15 @@ repositories:
       type: git
       url: https://github.com/Ekumen-OS/beluga.git
       version: main
+    release:
+      packages:
+      - beluga
+      - beluga_amcl
+      - beluga_ros
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/beluga-release.git
+      version: 2.0.0-1
     source:
       type: git
       url: https://github.com/Ekumen-OS/beluga.git
