libcamera: 0.3.0-2 in 'rolling/distribution.yaml' [bloom]

--- a/rolling/distribution.yaml
+++ b/rolling/distribution.yaml
@@ -2964,6 +2964,17 @@ repositories:
       url: https://github.com/ros-event-camera/libcaer_vendor.git
       version: rolling
     status: developed
+  libcamera:
+    release:
+      tags:
+        release: release/rolling/{package}/{version}
+      url: https://github.com/ros2-gbp/libcamera-release.git
+      version: 0.3.0-2
+    source:
+      type: git
+      url: https://git.libcamera.org/libcamera/libcamera.git
+      version: master
+    status: maintained
   libg2o:
     release:
       tags:
