Add key pyfirmata into rosdep

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -389,6 +389,13 @@ pydrive-pip:
   ubuntu:
     pip:
       packages: [PyDrive]
+pyfirmata-pip:
+  debian:
+    pip:
+      packages: [pyfirmata]
+  ubuntu:
+    pip:
+      packages: [pyfirmata]
 pyflakes3:
   alpine: [py3-pyflakes]
   arch: [python-pyflakes]
