Update key to include python3-

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -389,10 +389,6 @@ pydrive-pip:
   ubuntu:
     pip:
       packages: [PyDrive]
-pyfirmata-pip:
-  '*':
-    pip:
-      packages: [pyfirmata]
 pyflakes3:
   alpine: [py3-pyflakes]
   arch: [python-pyflakes]
@@ -7923,6 +7919,10 @@ python3-pyee:
   fedora: [python3-ee]
   opensuse: [python3-pyee]
   ubuntu: [python3-pyee]
+python3-pyfirmata-pip:
+  '*':
+    pip:
+      packages: [pyfirmata]
 python3-pyftdi-pip:
   debian:
     pip:
