add kornia pip dependency to python.yaml

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6748,6 +6748,19 @@ python3-kml2geojson-pip:
   ubuntu:
     pip:
       packages: [kml2geojson]
+python3-kornia-pip:
+  debian:
+    pip:
+      packages: [kornia]
+  fedora:
+    pip:
+      packages: [kornia]
+  osx:
+    pip:
+      packages: [kornia]
+  ubuntu:
+    pip:
+      packages: [kornia]
 python3-lark-parser:
   alpine: [py3-lark-parser]
   arch: [python-lark-parser]
