--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5014,6 +5014,23 @@ repositories:
       type: git
       url: https://github.com/bosch-engineering/off_highway_sensor_drivers.git
       version: humble-devel
+    release:
+      packages:
+      - off_highway_can
+      - off_highway_general_purpose_radar
+      - off_highway_general_purpose_radar_msgs
+      - off_highway_premium_radar_sample
+      - off_highway_premium_radar_sample_msgs
+      - off_highway_radar
+      - off_highway_radar_msgs
+      - off_highway_sensor_drivers
+      - off_highway_sensor_drivers_examples
+      - off_highway_uss
+      - off_highway_uss_msgs
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/off_highway_sensor_drivers-release.git
+      version: 0.6.0-2
     source:
       type: git
       url: https://github.com/bosch-engineering/off_highway_sensor_drivers.git
