--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -10039,6 +10039,17 @@ repositories:
       type: git
       url: https://github.com/alliedvision/vimbax_ros2_driver.git
       version: humble
+    release:
+      packages:
+      - vimbax_camera
+      - vimbax_camera_events
+      - vimbax_camera_examples
+      - vimbax_camera_msgs
+      - vmbc_interface
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/vimbax_ros2_driver-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/alliedvision/vimbax_ros2_driver.git
