--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -3240,6 +3240,14 @@ repositories:
       type: git
       url: https://github.com/kroshu/kuka-external-control-sdk.git
       version: master
+    release:
+      packages:
+      - kuka_external_control_sdk
+      - kuka_external_control_sdk_examples
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/kuka_external_control_sdk-release.git
+      version: 1.3.1-1
     source:
       type: git
       url: https://github.com/kroshu/kuka-external-control-sdk.git
