Update pyFirmata to pyFirmata2
pyFirmata is not being maintained anymore.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7919,10 +7919,10 @@ python3-pyee:
   fedora: [python3-ee]
   opensuse: [python3-pyee]
   ubuntu: [python3-pyee]
-python3-pyfirmata-pip:
+python3-pyfirmata2-pip:
   '*':
     pip:
-      packages: [pyfirmata]
+      packages: [pyfirmata2]
 python3-pyftdi-pip:
   debian:
     pip:
