py_binding_tools: 2.0.0-1 in 'iron/distribution.yaml' [bloom]

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -4656,6 +4656,17 @@ repositories:
       url: https://github.com/Simple-Robotics/proxsuite.git
       version: devel
     status: developed
+  py_binding_tools:
+    release:
+      tags:
+        release: release/iron/{package}/{version}
+      url: https://github.com/ros-gbp/py_binding_tools-release.git
+      version: 2.0.0-1
+    source:
+      type: git
+      url: https://github.com/ros-planning/py_binding_tools.git
+      version: ros2
+    status: maintained
   py_trees:
     doc:
       type: git
