add whill_msgs to humble

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -10315,6 +10315,16 @@ repositories:
       url: https://github.com/whill-labs/ros2_whill.git
       version: humble
     status: developed
+  whill_msgs:
+    doc:
+      type: git
+      url: https://github.com/whill-labs/ros2_whill_interfaces.git
+      version: humble
+    source:
+      type: git
+      url: https://github.com/whill-labs/ros2_whill_interfaces.git
+      version: humble
+    status: developed
   wireless:
     doc:
       type: git
