--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -6748,6 +6748,10 @@ python3-kml2geojson-pip:
   ubuntu:
     pip:
       packages: [kml2geojson]
+python3-kornia-pip:
+  '*':
+    pip:
+      packages: [kornia]
 python3-lark-parser:
   alpine: [py3-lark-parser]
   arch: [python-lark-parser]
