--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -7923,6 +7923,10 @@ python3-pyee:
   fedora: [python3-ee]
   opensuse: [python3-pyee]
   ubuntu: [python3-pyee]
+python3-pyfirmata2-pip:
+  '*':
+    pip:
+      packages: [pyfirmata2]
 python3-pyftdi-pip:
   debian:
     pip:
