ndt_omp: 0.0.0-2 in 'iron/distribution.yaml' [bloom]

--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -3841,6 +3841,15 @@ repositories:
       version: iron
     status: maintained
   ndt_omp:
+    doc:
+      type: git
+      url: https://github.com/koide3/ndt_omp.git
+      version: master
+    release:
+      tags:
+        release: release/iron/{package}/{version}
+      url: https://github.com/ros2-gbp/ndt_omp-release.git
+      version: 0.0.0-2
     source:
       type: git
       url: https://github.com/koide3/ndt_omp.git
