--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -4743,6 +4743,15 @@ repositories:
       version: humble
     status: maintained
   ndt_omp:
+    doc:
+      type: git
+      url: https://github.com/koide3/ndt_omp.git
+      version: master
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/ndt_omp-release.git
+      version: 0.0.0-1
     source:
       type: git
       url: https://github.com/koide3/ndt_omp.git
