--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -5861,6 +5861,21 @@ repositories:
       url: https://github.com/mrpt-ros-pkg/pose_cov_ops.git
       version: master
     status: maintained
+  pproto:
+    doc:
+      type: git
+      url: https://github.com/egorov-vn/rosdistro-pproto.git
+      version: master
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/egorov-vn/rosdistro-pproto-release.git
+      version: 0.0.1
+    source:
+      type: git
+      url: https://github.com/egorov-vn/rosdistro-pproto.git
+      version: master
+    status: maintained
   proxsuite:
     doc:
       type: git
@@ -8495,6 +8510,21 @@ repositories:
       test_pull_requests: true
       type: git
       url: https://github.com/septentrio-gnss/septentrio_gnss_driver.git
+      version: master
+    status: maintained
+  shared:
+    doc:
+      type: git
+      url: https://github.com/egorov-vn/rosdistro-shared.git
+      version: master
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/egorov-vn/rosdistro-shared-release.git
+      version: 0.0.1
+    source:
+      type: git
+      url: https://github.com/egorov-vn/rosdistro-shared.git
       version: master
     status: maintained
   sick_safetyscanners2:
