Add xvfb entry for rhel
Signed-off-by: Addisu Z. Taddese <addisu@openrobotics.org>

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -8974,6 +8974,7 @@ xvfb:
   fedora: [xorg-x11-server-Xvfb]
   gentoo: [x11-misc/xvfb-run]
   nixos: [xorg.xorgserver]
+  rhel: [xorg-x11-server-Xvfb]
   ubuntu: [xvfb]
 xz-utils:
   arch: [xz]
