Add tochka_ai_shared_cpp_libs repo

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -9296,6 +9296,21 @@ repositories:
       url: https://github.com/ros2/tlsf.git
       version: humble
     status: maintained
+  tochka_ai_shared_cpp_libs:
+    doc:
+      type: git
+      url: https://github.com/TochkaAI/tochka-ai-shared-cpp-libs
+      version: master
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/TochkaAI/tochka-ai-shared-cpp-libs-release
+      version: 0.0.1
+    source:
+      type: git
+      url: https://github.com/TochkaAI/tochka-ai-shared-cpp-libs
+      version: master
+    status: maintained
   topic_based_ros2_control:
     release:
       tags:
