--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -556,6 +556,8 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_internal_msgs.git
+      version: rolling
+    status: developed
   autoware_lanelet2_extension:
     source:
       type: git
