--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -661,6 +661,8 @@ repositories:
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_internal_msgs.git
+      version: rolling
+    status: developed
   autoware_lanelet2_extension:
     source:
       type: git
