autoware_internal_msgs: 1.0.1-1 in 'humble/distribution.yaml' [bloom]

--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -658,6 +658,11 @@ repositories:
       version: rolling
     status: developed
   autoware_internal_msgs:
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/autoware_internal_msgs-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_internal_msgs.git
