--- a/jazzy/distribution.yaml
+++ b/jazzy/distribution.yaml
@@ -553,6 +553,11 @@ repositories:
       version: rolling
     status: developed
   autoware_internal_msgs:
+    release:
+      tags:
+        release: release/jazzy/{package}/{version}
+      url: https://github.com/ros2-gbp/autoware_internal_msgs-release.git
+      version: 1.0.1-1
     source:
       type: git
       url: https://github.com/autowarefoundation/autoware_internal_msgs.git
