--- a/humble/distribution.yaml
+++ b/humble/distribution.yaml
@@ -8676,6 +8676,11 @@ repositories:
       version: humble
     status: developed
   situational_graphs_msgs:
+    release:
+      tags:
+        release: release/humble/{package}/{version}
+      url: https://github.com/ros2-gbp/situational_graphs_msgs-release.git
+      version: 0.0.1-2
     source:
       type: git
       url: https://github.com/snt-arg/situational_graphs_msgs.git
