--- a/iron/distribution.yaml
+++ b/iron/distribution.yaml
@@ -7028,7 +7028,7 @@ repositories:
     doc:
       type: git
       url: https://github.com/nobleo/rviz_satellite.git
-      version: ros2
+      version: main
     release:
       tags:
         release: release/iron/{package}/{version}
@@ -7037,7 +7037,7 @@ repositories:
     source:
       type: git
       url: https://github.com/nobleo/rviz_satellite.git
-      version: ros2
+      version: main
     status: maintained
   rviz_visual_tools:
     doc:
