Add icecream as a rosdep key
Adds python ice cream as a rosdep key.

--- a/rosdep/python.yaml
+++ b/rosdep/python.yaml
@@ -1951,6 +1951,10 @@ python-hypothesis:
   gentoo: [dev-python/hypothesis]
   ubuntu:
     '*': [python-hypothesis]
+python-icecream:
+  ubuntu:
+    jammy: [python3-icecream]
+    noble: [python3-icecream]
 python-imageio:
   debian:
     buster: [python-imageio]
